<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/custom_list_item">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_name"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Space android:layout_height="5dp"
        android:layout_width="wrap_content"/>

    <!-- Heart rate (container)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <!-- Heart rate icon-->
        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_favorite_border_black_24dp"/>

        <Space android:layout_height="wrap_content"
            android:layout_width="5dp"/>

        <!-- Current pulse value-->
        <TextView
            android:id="@+id/heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_pulse_data"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/colorHeartRate"
            android:textStyle="bold"/>

        <Space android:layout_height="wrap_content"
            android:layout_width="@dimen/text_spacing"/>

        <!--Unit indicator (BPM)-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pulse_unit"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/colorHeartRate"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>