<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientActivity"
    android:orientation="vertical"
    android:background="#f5f5f5"
    android:padding="@dimen/padding">

    <Space android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_spacing"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/logo_size"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"/>

    <Space android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_spacing_large"/>

    <TextView
        android:id="@+id/patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_name"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>

    <Space android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <!-- Heart rate (container)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <!-- Heart rate icon-->
        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_favorite_border_black_24dp"/>

        <Space android:layout_height="wrap_content"
            android:layout_width="5dp"/>

        <!-- Current pulse value-->
        <TextView
            android:id="@+id/heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_pulse_data"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/colorHeartRate"
            android:textStyle="bold"/>

        <Space android:layout_height="wrap_content"
            android:layout_width="@dimen/text_spacing"/>

        <!--Unit indicator (BPM)-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pulse_unit"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/colorHeartRate"
            android:textStyle="bold"/>
    </LinearLayout>

    <Space android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:seriesColor="@color/colorPrimary"
        android:id="@+id/graph" />

    <Space android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <TextView
        android:clickable="true"
        android:focusable="true"
        android:onClick="buttonSimulate_onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/simulate_graph"/>
</LinearLayout>